--- a/public/styles/kitchenStyle.css
+++ b/public/styles/kitchenStyle.css
@@ -1,9 +1,8 @@
-
 .cooking-orderHead {
-  background-color:#90a900;
-   color: black;
+  background-color: #90a900;
+  color: black;
   font-weight: bolder;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-size: 14px;
   letter-spacing: 1px;
 }
@@ -11,58 +10,51 @@
   background-color: rgb(167, 152, 182);
   color: black;
   font-weight: bolder;
-  font-family: 'Raleway', sans-serif;
-  font-size: 14px; 
+  font-family: "Raleway", sans-serif;
+  font-size: 14px;
   letter-spacing: 1px;
 }
-
 
 .restart-orderHead {
   background-color: rgb(224, 224, 224);
-   font-weight: bolder;
-  font-family: 'Raleway', sans-serif;
-  font-size: 14px; 
+  font-weight: bolder;
+  font-family: "Raleway", sans-serif;
+  font-size: 14px;
   letter-spacing: 1px;
-
 }
-
 
 .containerKitchen {
-    margin-top: 0;
-    margin: 0;
-      
-}      
-.stationStart, .stationCooking,.stationRecall {
+  margin-top: 0;
+  margin: 0;
+}
+.stationStart,
+.stationCooking,
+.stationRecall {
   margin-bottom: 10px;
-  font-family: 'Poppins', sans-serif;  
+  font-family: "Poppins", sans-serif;
   font-size: 30px;
   letter-spacing: 1;
- color:#ccd1cf
-
+  color: #ccd1cf;
 }
- /* end of kicthen view  */
-
-
+/* end of kicthen view  */
 
 /********* EXPO view and MODAL style  *******/
 body {
-
   background-color: #ffffff;
   background-image: linear-gradient(200deg, #ffffff 2%, #d7e1ec 80%);
   height: 120vh;
 }
 
-.ulStation, 
+.ulStation,
 .liStation {
   margin: 0 !important;
   padding: 5px !important;
   text-align: left;
   font-size: 14px;
   color: black;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   letter-spacing: 1px;
   font-weight: bolder;
-
 }
 .ulExpo,
 .liExpo {
@@ -71,16 +63,15 @@ body {
   text-align: left;
   font-size: 14px;
   color: black;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   letter-spacing: 1px;
   font-weight: bolder;
 }
 
-
 .modalHeader {
   background-color: #90a900;
   font-size: 20px;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   color: white;
   letter-spacing: 1px;
 }
@@ -95,27 +86,25 @@ body {
   height: 100%;
 }
 
-.tableN
- {
+.tableN {
   font-size: 15px;
 }
 
-#complete ,  #deleteOrder {
-  font-family: 'Raleway', sans-serif;
+#complete,
+#deleteOrder {
+  font-family: "Raleway", sans-serif;
   letter-spacing: 1;
 }
 .mods {
   line-height: 0 !important;
 }
 .stationCard {
-  box-shadow: 2px 2px 5px 4px rgba(0, 0, 255, .2);
+  box-shadow: 2px 2px 5px 4px rgba(0, 0, 255, 0.2);
   margin-top: 8px;
   border-style: ridge;
-
-
 }
 .expoCard {
-  box-shadow: 2px 2px 5px 4px rgba(0, 0, 255, .2);
+  box-shadow: 2px 2px 5px 4px rgba(0, 0, 255, 0.2);
   margin-top: 10px;
   border-style: ridge;
 }
@@ -123,7 +112,7 @@ body {
 .cardHeader {
   color: black;
   font-weight: bolder;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-size: 13px;
   padding: 8px;
   letter-spacing: 1px;
@@ -132,7 +121,7 @@ body {
 
 .cardBody {
   padding: 0;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: lighter;
 }
 
@@ -140,27 +129,25 @@ body {
   font-size: 14px;
   letter-spacing: 5px;
   top: 1px;
-  font-family: 'Raleway', sans-serif;
-  background-color:#90a900;
+  font-family: "Raleway", sans-serif;
+  background-color: #90a900;
   color: white;
 }
-
 .logo {
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
+  font-size: 30px;
   margin-left: 40px;
-  letter-spacing: 2px;
-  font-weight: bolder;
+  color: #363636;
 }
 
 .timer {
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   letter-spacing: 1px;
   font-size: 20px;
   margin-left: 140px;
 }
-.stationN{
-  font-family: 'Raleway', sans-serif;
-
+.stationN {
+  font-family: "Raleway", sans-serif;
 }
 /* Style the sidebar - fixed full height */
 .sidebar {
@@ -177,19 +164,15 @@ body {
 }
 .stationNav {
   background-color: white;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   margin-top: 0px !important;
   letter-spacing: 1px;
   font-weight: bolder;
-
-
 }
 .expoNav {
   background-color: white;
   margin-top: 0px !important;
-
 }
-
 
 /* Style sidebar links */
 .sidebar a {
@@ -202,18 +185,15 @@ body {
   display: block;
   align-content: center;
   margin-top: 30px;
-
 }
 
 .itemDropdown {
   font-size: 15px !important;
   margin-top: 0px !important;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   align-content: right;
   letter-spacing: 1px;
   color: white !important;
-  
-  
 }
 
 .dropdown-item:hover {
@@ -221,17 +201,12 @@ body {
 }
 .dropdown-menu {
   background-color: orange !important;
-  
- 
 }
 .sidebarIcon {
   font-size: 14px;
   font-weight: lighter;
   letter-spacing: 1px;
- 
 }
-
-
 
 .mods {
   padding: 1px;
@@ -239,9 +214,8 @@ body {
   color: gray;
 }
 
-
 .sidebar i {
   box-shadow: 1px blanchedalmond;
-  color:#FF9A00
+  color: #ff9a00;
 }
 /******* end of the expo styling *******/
